--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1107,6 +1107,55 @@ ferramentas
 
 
 
+@book{fregly2021data,
+  title={Data Science on AWS: Implementing End-To-End, Continuous AI and Machine Learning Pipelines},
+  author={Fregly, C. and Barth, A.},
+  isbn={9781492079392},
+  url={https://books.google.com.br/books?id=j57qzQEACAAJ},
+  year={2021},
+  publisher={O'Reilly Media, Incorporated}
+}
+
+@book{grant2020kubeflow,
+  title={Kubeflow for Machine Learning},
+  author={Grant, T. and Karau, H. and Lublinsky, B. and Liu, R. and Filonenko, I.},
+  isbn={9781492050070},
+  url={https://books.google.com.br/books?id=XLICEAAAQBAJ},
+  year={2020},
+  publisher={O'Reilly Media}
+}
+
+
+@book{davis2019cloud,
+  title={Cloud Native Patterns: Designing change-tolerant software},
+  author={Davis, C.},
+  isbn={9781617294297},
+  lccn={2019285191},
+  url={https://books.google.com.br/books?id=gocNvAEACAAJ},
+  year={2019},
+  publisher={Manning Publications}
+}
+
+@book{gilbert2018cloud,
+  title={Cloud Native Development Patterns and Best Practices: Practical architectural patterns for building modern, distributed cloud-native systems},
+  author={Gilbert, J.},
+  isbn={9781788476690},
+  url={https://books.google.com.br/books?id=DJdMDwAAQBAJ},
+  year={2018},
+  publisher={Packt Publishing}
+}
+
+
+@book{richardson2018microservices,
+  title={Microservices Patterns: With examples in Java},
+  author={Richardson, C.},
+  isbn={9781617294549},
+  lccn={2018289404},
+  url={https://books.google.com.br/books?id=UeK1swEACAAJ},
+  year={2018},
+  publisher={Manning Publications}
+}
+
 
 
 @misc{edge-of-cloud,
