--- a/cap-resultados.tex
+++ b/cap-resultados.tex
@@ -536,8 +536,7 @@ As figuras que mostram a variação de vazão de todas as execuções do experim
 
 Em um sistema que lida com dados em tempo real, a latência da transmissão de eventos pelo sistema é a principal métrica de análise do desempenho. Para medir a latência no \texttt{CEP Handler}, foi usado o método descrito na Seção  \ref{sec:experiment_architecture}. Uma marca temporal foi gerada no momento em que o evento primário foi enviado do microsserviço do experimento para ser consumido pelas instâncias de \texttt{CEP Workers}. Outra marca temporal foi gerada quando o evento foi armazenado no banco de dados chave-valor, depois de sua detecção pelo sistema. A latência foi tomada como a diferença entre esses dois valores. O tempo utilizado para os intervalos no eixo x dos gráficos de latência vêm da marca temporal de quando o evento foi armazenado, depois da detecção. 
 
-Cada uma das figuras de \ref{fig:boxplot_vf_agg_1} a \ref{fig:boxplot_BusB_agg} mostram as latências das execuções de uma categoria de tipos de evento, separadas por algoritmo de balanceamento de carga. Diagramas de caixa foram usados para representar a variação de latência das execuções. Cada caixa mostra o primeiro quartil, a mediana e o terceiro quartil das latências de uma execução.  As linhas que se estendem a partir de uma caixa indicam a variabilidade fora do quartil superior e do quartil inferior. A Apêndice \ref{ape:graphics} tem os diagramas de caixa que representam a variação de latência ao longo do tempo da execução de todos os experimentos, separados por categorias de tipos de evento.
-
+Cada uma das figuras de \ref{fig:boxplot_vf_agg_1} a \ref{fig:boxplot_BusB_agg} mostram as latências das execuções de uma categoria de tipos de evento, separadas por algoritmo de balanceamento de carga. Diagramas de caixa foram usados para representar a variação de latência das execuções. Cada caixa mostra o primeiro quartil, a mediana e o terceiro quartil das latências de uma execução.  As linhas que se estendem a partir de uma caixa indicam a variabilidade fora do quartil superior e do quartil inferior. 
 
 % - \todo{Só para te avisar: expliquei aqui como ler os diagramas de caixa.}
 
@@ -659,11 +658,13 @@ Cada uma das figuras de \ref{fig:boxplot_vf_agg_1} a \ref{fig:boxplot_BusB_agg} 
 \caption{Tipos de evento \textbf{BusB}}
 \label{fig:BoxPlot_BusB_IS_7-dez-is-r}
 \end{subfigure}%
-\label{fig:BoxPlot_IS_7-dez-is-r}
 \caption{Diagramas de caixa das latências por intervalos de cinco minutos ao longo da execução 2 do experimento utilizando o algoritmo de balanceamento de carga por Similaridade de Entrada.}
+\label{fig:BoxPlot_IS_7-dez-is-r}
 \end{figure}
 
-A Figura \ref{fig:BoxPlot_IS_7-dez-is-r} representa, para cada uma das categorias de eventos, a variação da latência ao longo da execução 2 utilizando o Algoritmo de balanceamento de carga por Similaridade de Entrada. A divisão de agregação dos quartis de latência é feita de cinco a cinco minutos. Os gráficos representado a variação de latência por categoria de evento ao longo das outras execuções podem ser encontradas no Apêndice \ref{ape:graphics}. Na figura \ref{fig:BoxPlot_IS_7-dez-is-r} é possível visualizar que o terceiro quartil da latência aumenta ao longo do experimento até atingir um patamar estável, seguindo o aumento de carga de entrada, apresentado nas Figuras \ref{fig:load_and_instances-time-SU}. As categorias de tipo de evento \textbf{corr}, \textbf{BusB} e \textbf{vel} apresentam um crescimento maior no início do experimento e atingem um patamar um pouco mais elevado. Isso pode ser explicado por utilizarem os tipos de eventos da categorias \textbf{vi} como entrada, o qual utiliza os tipos \textbf{vf} como entrada. Logo os dados do evento de entrada para os tipos de evento das categorias \textbf{vel} e \textbf{BusB} ja foram transimitidos pelo \textit{broker} duas vezes. Contudo o terceiro quartil da latencias de todas as categorias dos tipos de eventos não ultrapassou 160 milisegundos. 
+A Figura \ref{fig:BoxPlot_IS_7-dez-is-r} mostra, para cada uma das categorias de eventos, a variação da latência ao longo da execução 2 do experimento com o algoritmo de balanceamento de carga por Similaridade de Entrada. 
+Os gráficos da variação de latência por categoria de evento ao longo das outras execuções podem ser vistos no Apêndice \ref{ape:graphics}.
+As latências foram agrupadas em intervalos de cinco minutos, para facilitar a visualização do dados. Na Figura \ref{fig:BoxPlot_IS_7-dez-is-r}, é possível visualizar que o terceiro quartil da latência aumenta ao longo do experimento até atingir um patamar estável, seguindo o aumento da carga de entrada, apresentado na Figura \ref{fig:load_and_instances-time-SU}. As categorias de tipo de evento \textbf{corr}, \textbf{BusB} e \textbf{vel} apresentam um crescimento maior no início do experimento e atingem um patamar um pouco mais elevado. Isso pode ser explicado por utilizarem os tipos de eventos da categoria \textbf{vi} como entrada, o qual utiliza os tipos \textbf{vf} como entrada. Logo, os dados do evento de entrada para os tipos de evento das categorias \textbf{vel} e \textbf{BusB} já foram transmitidos pelo \textit{broker} duas vezes. %Contudo, o terceiro quartil das latências de todas as categorias dos tipos de eventos não ultrapassou 160 milissegundos. 
 
 
 
