--- a/cap-trabalhos.tex
+++ b/cap-trabalhos.tex
@@ -201,7 +201,7 @@ A arquitetura apresentada por \cite{6906776} usa uma abordagem para escalar a de
  %Os trabalhos apresentados que mencionam o uso de CEP em sistemas nativos de nuvem não propõe o desenvolvimento de sistemas que oferecem ao usuário a opção de definição de tipos de eventos utilizando os operadores de CEP.\todo{Rever o trecho, já que o trabalho ao qual ele se referia foi removido do cap. 3} 
 
 A pesquisa em desenvolvimento de sistemas de CEP que escalam horizontalmente e são nativos de nuvem ainda foi pouco explorada.
-Atualmente, com o aumento do uso de computação em nuvem, esta deveria ser uma das considerações mais importantes no projeto de sistemas distribuídos, visto que a grande maioria dos sistemas que lidam com Big Data em tempo real estão migrando para nuvem. Sistemas que são construídos a partir do conhecimento de como a nuvem funciona e levando em conta as falhas e os métodos padronizados de recuperação automática, além da auto-escalabilidade, são reconhecidos como exemplos a serem seguidos, não só pela comunidade de sistemas nativos de nuvem, como por administradores e pesquisadores em geral~\citep{garrison2017cloud,43826,hightower2017kubernetes,burns2018managing,fowler2017microservices}.
+Atualmente, com o aumento do uso de computação em nuvem, esta deveria ser uma das considerações mais importantes no projeto de sistemas distribuídos, visto que a grande maioria dos sistemas que lidam com Big Data em tempo real estão migrando para nuvem. Sistemas que são construídos a partir do conhecimento de como a nuvem funciona e levando em conta as falhas e os métodos padronizados de recuperação automática, além da auto-escalabilidade, são reconhecidos como exemplos a serem seguidos, não só pela comunidade de sistemas nativos de nuvem, como por administradores e pesquisadores em geral~\citep{garrison2017cloud,richardson2018microservices,fregly2021data,grant2020kubeflow,davis2019cloud,gilbert2018cloud}.
 Este trabalho de mestrado desenvolveu uma arquitetura de CEP que leva em consideração esses requisitos para a distribuição de processamento de eventos.
 
 
