--- a/tese-exemplo.tex
+++ b/tese-exemplo.tex
@@ -123,14 +123,14 @@ framexrightmargin=10pt
 \onehalfspacing  % espaçamento
 
 % ---------------------------------------------------------------------------- %
+%Processamento de Eventos Complexos Nativo de Nuvem para Cidades Inteligentes
 % CAPA
 % Nota: O título para as dissertações/teses do IME-USP devem caber em um 
 % orifício de 10,7cm de largura x 6,0cm de altura que há na capa fornecida pela SPG.
 \thispagestyle{empty}
 \begin{center}
     \vspace*{2.3cm}
-    \textbf{\Large{Processamento Escalável de Eventos Complexos \\
-    em Cidades Inteligentes}}\\
+    \textbf{\Large{Processamento de Eventos Complexos\\ Nativo de Nuvem para Cidades Inteligentes}}\\
     
     \vspace*{1.2cm}
     \Large{Fernando Freire Scattone}
@@ -173,15 +173,14 @@ framexrightmargin=10pt
 \thispagestyle{empty}
     \begin{center}
         \vspace*{2.3 cm}
-        \textbf{\Large{Processamento Escalável de Eventos Complexos \\
-    em Cidades Inteligentes}}\\
+        \textbf{\Large{Processamento de Eventos Complexos\\ Nativo de Nuvem para Cidades Inteligentes}}\\
         \vspace*{2 cm}
     \end{center}
 
     \vskip 2cm
 
     \begin{flushright}
-	Esta é a versão original da dissertação/tese elaborada pelo\\
+	Esta é a versão original da dissertação elaborada pelo\\
 	candidato Fernando Freire Scattone, tal como \\
 	submetida à Comissão Julgadora.
     \end{flushright}
@@ -249,15 +248,15 @@ framexrightmargin=10pt
 % Se o candidato não quer fazer agradecimentos, deve simplesmente eliminar esta página 
 % Se o candidato não quer fazer agradecimentos, deve simplesmente eliminar esta página 
  \chapter*{Agradecimentos}
- Durante o tempo de duração do mestrado passei por várias fases de aprendizado, onde tive a sorte de encontrar várias pessoas que passaram a se tornar meus colegas e amigos. Primeiramente tenho que reconhecer o valor do apoio que meus amigos da graduação, que influenciaram na minha decisão de vir para o IME-USP na pós-graduação e me apoiaram psicologicamente durante todo o curso o mestrado, sempre que pedia ajuda, Fernando Augusto Joaquim, Lucas Magno, Rafaela Gesing, Naim Elias Comar, Fábio Chagas da Silva, Rodrigo Frausino e muitos outros que conheci durante minha graduação no instituto de física. No primeiro ano, onde cursei todas as disciplinas obrigatórias, as quais não tinha certeza que estava preparado para cursar, foi ótimo poder me aproximar e contar com o apoio, técnico e emocional, da minha colega de orientadora e amiga próxima, Fernanda de Camargo Magano e da sua turma de amigos do curso de computação, Shayenne da Luz Moura, Eduardo Delgado Coloma Bier e Florence Alyssa Sakuma Shibata, os quais se tornaram amigos próximos e queridos. Ao entrar para o grupo de pesquisa de sistemas, alguns alunos foram instrumentais em me auxiliar a decidir meu tema de mestrado e no seu desenvolvimento, especialmente Arthur Del Esposte, Tallys Martins, Lucas Kanashiro, Giuliano Belinassi e mais outros que foram prestativos quando tinha dúvidas. 
+ Durante o tempo de duração do mestrado, passei por várias fases de aprendizado, onde tive a sorte de encontrar várias pessoas que se tornaram meus colegas e amigos. Primeiramente, tenho que reconhecer o valor do apoio que meus amigos da graduação, que influenciaram na minha decisão de vir para o IME-USP na pós-graduação e me apoiaram psicologicamente durante todo o curso o mestrado, sempre que pedia ajuda, Fernando Augusto Joaquim, Lucas Magno, Rafaela Gesing, Naim Elias Comar, Fábio Chagas da Silva, Rodrigo Frausino e muitos outros que conheci durante minha graduação no Instituto de Física. No primeiro ano, onde cursei todas as disciplinas obrigatórias, as quais não tinha certeza de que estava preparado para cursar, foi ótimo poder me aproximar e contar com o apoio, técnico e emocional, da minha colega de orientadora e amiga próxima, Fernanda de Camargo Magano e da sua turma de amigos do curso de Computação, Shayenne da Luz Moura, Eduardo Delgado Coloma Bier e Florence Alyssa Sakuma Shibata, os quais se tornaram amigos próximos e queridos. Ao entrar para o grupo de pesquisa de Sistemas de Software, alguns alunos foram instrumentais em me auxiliar a decidir meu tema de mestrado e no seu desenvolvimento, especialmente Arthur Del Esposte, Tallys Martins, Lucas Kanashiro, Giuliano Belinassi e mais outros que foram prestativos quando tinha dúvidas. 
  
- Durante o final do segundo ano do mestrado e pelo tempo seguinte, tive a oportunidade de participar e me tornar um membro do grupo de extensão USPCodeLab. Esta experiência foi ótima para me colocar em contato com novas ideias e participar de atividades que eu nunca teria pensado em me inserir, tenho muito a agradecer a todos os membros, especialmente aos amigos  Felipe Marques e Carolina Arenas, que me ajudaram a entender como é a experiencia de alunos de computação em outros institutos da USP (EACH e ICMC, respectivamente). Junto com o Renato Cordeiro Ferreira, uma pessoa que admiro muito e que se tornou um ótimo amigo, pude desenvolver um projeto de co-orientação de iniciações científicas dentro do grupo de extensão, uma experiência ótima para entender como é orientar uma pessoa e lidar com o aparato burocrático para ir atrás de verba para o projeto de pesquisa. Mesmo que não tenhamos alcançado nosso objetivo inicial, o projeto ADA é algo que eu sempre vou me orgulhar de ter feito e tenho que agradecer todas as pessoas que se comprometeram com o projeto do início ao fim, os doutorandos, os quais posso considerar que se tornaram amigos pela jornada de dificuldades que enfrentamos juntos:Carlos Eduardo Leão Elmadjian, Guilherem Feulo do Espiríto Santo e especialmente Thatiane de Oliveira Rosa, com quem pude compartilhar a orientação da Aléxia Carolina Sheffer, referente a microsserviços do projeto.
+ Durante o final do segundo ano do mestrado e pelo tempo seguinte, tive a oportunidade de participar e me tornar um membro do grupo de extensão USPCodeLab. Esta experiência foi ótima para me colocar em contato com novas ideias e participar de atividades que eu nunca teria pensado em me inserir, tenho muito a agradecer a todos os membros, especialmente aos amigos  Felipe Marques e Carolina Arenas, que me ajudaram a entender como é a experiencia de alunos de Computação em outros institutos da USP (EACH e ICMC, respectivamente). Junto com o Renato Cordeiro Ferreira, uma pessoa que admiro muito e que se tornou um ótimo amigo, pude desenvolver um projeto de co-orientação de iniciações científicas dentro do grupo de extensão, uma experiência ótima para entender como é orientar uma pessoa e lidar com o aparato burocrático para ir atrás de verba para o projeto de pesquisa. Mesmo que não tenhamos alcançado nosso objetivo inicial, o projeto ADA é algo que eu sempre vou me orgulhar de ter feito e tenho que agradecer todas as pessoas que se comprometeram com o projeto do início ao fim, os doutorandos, os quais posso considerar que se tornaram amigos pela jornada de dificuldades que enfrentamos juntos: Carlos Eduardo Leão Elmadjian, Guilherem Feulo do Espiríto Santo e especialmente Thatiane de Oliveira Rosa, com quem pude compartilhar a orientação da Aléxia Carolina Sheffer, referente a microsserviços do projeto.
  
- Também gostaria de agradecer também aos professores do grupo de sistemas e ao técnico do Laboratório, Nelson Lago, que tirou várias dúvidas minhas referentes a assuntos os quais não tive a oportunidade de ver durante a graduação. Em especial, tenho que agradecer a minha orientadora, professora Kelly Rosa Braghetto, que estava sempre disposta a me ajudar quando tinha dúvidas. Concomitantemente, gostaria de agradecer as contribuições e colaborações do professor Francisco Silva e seu Aluno, Jesseildo, por construírem uma parte importante do meu sistema e ao professor Alvaro Luiz Fazenda, por financiar os créditos de nuvem usados para executar o experimento.Por fim, gostaria de agradecer a minha família, que nunca dúvidou da minha capacidade de enfrentar os problemas da pós-graduação mesmo nos momento em que eu não compartilhava desta confiança e especialmente a minha cachorra Lana, que ficou ao meu lado desde o inicio do meu Ensino Médio e veio a falecer no início deste ano. 
+ Também gostaria de agradecer aos professores do grupo de Sistemas de Software e ao técnico do Laboratório, Nelson Lago, que tirou várias dúvidas minhas referentes a assuntos os quais não tive a oportunidade de ver durante a graduação. Em especial, tenho que agradecer a minha orientadora, professora Kelly Rosa Braghetto, que estava sempre disposta a me ajudar quando tinha dúvidas. Concomitantemente, gostaria de agradecer as contribuições e colaborações do professor Francisco Silva e seu Aluno, Jesseildo, por construírem uma parte importante do meu sistema e ao professor Álvaro Luiz Fazenda, por financiar os créditos de nuvem usados para executar o experimento. Por fim, gostaria de agradecer a minha família, que nunca duvidou da minha capacidade de enfrentar os problemas da pós-graduação mesmo nos momento em que eu não compartilhava desta confiança e especialmente a minha cachorra Lana, que ficou ao meu lado desde o inicio do meu Ensino Médio e veio a falecer no início deste ano. 
  
- Ao terminar este trabalho, tenho uma consciência muito maior sobre o poder do conhecimento que adquiri neste período. Mais do que nunca, a influencia do uso da computação nos direitos pessoais e coletivos da sociedade é algo que todo cientista da computação tem o dever de saber. Pretendo sempre levar em consideração a influência que meu código pode ter quando em execução e basear minhas escolhas de projetos futuros para que meu trabalho tenha uma influencia positiva no âmbito que se propor a atingir.
+ Ao terminar este trabalho, tenho uma consciência muito maior sobre o poder do conhecimento que adquiri neste período. Mais do que nunca, a influência do uso da computação nos direitos pessoais e coletivos da sociedade é algo que todo cientista da computação tem o dever de saber. Pretendo sempre levar em consideração a influência que meu código pode ter quando em execução e basear minhas escolhas de projetos futuros para que meu trabalho tenha uma influência positiva no âmbito que se propor a atingir.
  
- Meu aprendizado não passou só pelo conhecimento técnico, mas especialmente pelo aprendizado de solucionar problemas em conjunto com outros e na capacidade de aprender a achar soluções por conta própria. Aprendi a ter coragem de admitir quando há problemas, principalmente àqueles que não sei resolver. Aprendi a ter perseverança que qualquer empecilho do desenvolvimento nunca seria uma dificuldade única e que, com paciência e sem cair no desespero, tudo tinha solução, mesmo que fosse drástica. Aprendi que improvisação é mais importante que eu imaginava e que saber lidar com desafios ao longo do caminho é tão útil quanto ter uma plano para toda a jornada. No entanto o aprendizado que mais se destaca na minha consciência é o que chamamos na computação de entrega contínua, fazer uma parte pequena e útil do projeto toda semana, de forma que existe uma comparação frequente da expectativa e realidade. Desta forma, nenhum indício de erro tem a capacidade de se integrar ao núcleo do projeto e possibilitando testes a cada alteração. Estes aprendizados não são importantes somente na escrita de código, mas também ao iniciar e construir projetos de qualquer natureza. 
+ Meu aprendizado não passou só pelo conhecimento técnico, mas especialmente pelo aprendizado de solucionar problemas em conjunto com outros e na capacidade de aprender a achar soluções por conta própria. Aprendi a ter coragem de admitir quando há problemas, principalmente aqueles que não sei resolver. Aprendi a ter perseverança que qualquer empecilho do desenvolvimento nunca seria uma dificuldade única e que, com paciência e sem cair no desespero, tudo tinha solução, mesmo que fosse drástica. Aprendi que improvisação é mais importante que eu imaginava e que saber lidar com desafios ao longo do caminho é tão útil quanto ter uma plano para toda a jornada. No entanto o aprendizado que mais se destaca na minha consciência é o que chamamos na computação de entrega contínua, fazer uma parte pequena e útil do projeto toda semana, de forma que existe uma comparação frequente da expectativa e realidade. Desta forma, nenhum indício de erro tem a capacidade de se integrar ao núcleo do projeto e possibilitando testes a cada alteração. Estes aprendizados não são importantes somente na escrita de código, mas também ao iniciar e construir projetos de qualquer natureza. 
  
  O conhecimento que eu tenho hoje e a minha opinião atual sobre a computação como área de conhecimento e matéria de estudo científico foi moldada por fatos e pela troca de opiniões que tive com pessoas de cada um dos grupos citados acima. Posso dizer que minha imaginação e minhas expectativas na graduação sobre o que seria essa jornada foram bem diferentes da realidade, com surpresas e desafios que nunca teria imaginado. Todos aqueles que me ajudaram a progredir tem meu sincero agradecimento.
 
@@ -298,7 +297,7 @@ cem milissegundos, satisfazendo os requisitos de processamento em tempo real do 
  %\todo[inline]{Fernando, esse resumo não explica o que você fez no trabalho e nem os resultados que você obteve. Você apresenta como problema a falta de implementações de "CEP nativas de nuvem". Da forma como está escrito, isso não parece um problema de pesquisa. Se for possível evitar, é melhor nem usar "nativo de nuvem" no resumo.  Você precisa falar sobre o problema de escalabilidade das arquiteturas de CEP distribuídas tradicionais. Depois, precisa dizer o que a sua arquitetura tem de diferente e porque isso trata de forma melhor o problema. Precisa dizer que ela se baseia em microsserviços coreografados, que é auto-escalável, etc. Você diz no resumo que implementou dois algoritmos, mas não fala de que se tratam, de qual é a diferença entre eles.  Depois, disse que usou dados de ônibus para fazer um experimento, mas não disse o que foi feito no experimento. Diz que o "algoritmo com maior agilidade" "expressou o melhor custo" e "maior eficácia". O que isso quer dizer? O que significa ter mais agilidade nesse contexto? E mais eficácia?  E qual dos dois algoritmos foi melhor? Basicamente, o que você disse foi: "implementei dois algoritmos e um foi melhor que o outro".  O leitor termina de ler o resumo sem saber nada sobre a sua arquitetura, os algoritmos de balanceamento e os resultados da análise de desempenho.  :(  Ao falar sobre os resultados da análise, você precisa dizer que, nos experimentos, o seu sistema se mostrou capaz de se ajustar às variações de carga de trabalho ao longo do tempo, garantindo baixa variação de latência de detecção dos eventos.}
  
  
- \noindent \textbf{Palavras-chave:} Cidades Inteligentes, Processamento de Eventos Complexos, Processamento de \emph{Big Data}, Computação de Nuvem, Escalabilidade, Microsserviços.
+ \noindent \textbf{Palavras-chave:} Cidades Inteligentes, Processamento de Eventos Complexos, Processamento de \emph{Big Data}, Computação Nativa de Nuvem, Escalabilidade, Microsserviços.
 
 % ---------------------------------------------------------------------------- %
 % Abstract
@@ -309,14 +308,11 @@ Dissertation (Masters) - Instituto de Matemática e Estatística,
 Universidade de São Paulo, São Paulo, 2020.
 \\
 
-Over the last few years, Smart City concepts have gained popularity because of its purposes of increasing sustainability and improving quality of life for large cities residents. Complex Event Processing is one of the most used techniques to process real-time data, with large volume and velocity, such as the data coming from Smart Cities. In CEP each new piece of data is treated as an event, and can be defined by an event type. New event types can be registered by defining an query using CEP operators to detect specific patterns on incoming events from other event types. In order to process real-time data for Smart Cities, scalability and fault tolerance are the main requirements to be fulfilled. Satisfying these requirements is essential to maintain a functioning system with acceptable latency levels for smart cities situations detection. Using cloud providers is a convenient method  to distribute and scale complex event processing, since cloud providers can dynamically manage computational resource usage. Current open source CEP implementations do not offer official cloud-native execution support, or even official distributed execution support.  The present work presents a cloud-native microservice architecture for distributed CEP. Event processing is distributed across several instances of the same microsservice, which can be dynamically created or destroyed based in resource usage. These instances use a choreography style of communication among each other, where there are no central nodes controlling all other instances, instead they must agree on any multi instance action. This style of communication ensures greater fault tolerance, since failures in one instance do not affect event processing in all other instances. A prototype of this architecture was developed, using open source tools, integrated with the InterSCity Smart City Platform, from INCT Future Internet for Smart Cities. An experimental scenario was design from real bus traffic data from São Paulo city.
-In order to evaluate system performance four metrics are analyzed: latency, throughput, number of events detected and resource usage. Results show the system achieves self-scalability, creating new CEP nodes as the input load increases, while maintaining acceptable levels of latency. 
-\\
+Over the last few years, Smart City concepts have gained popularity because of their purposes of increasing sustainability and improving quality of life for large cities' residents. Complex Event Processing is one of the most used techniques to process real-time data, with large volume and velocity, such as the data coming from Smart Cities. In CEP each new piece of data is treated as an event and can be defined by an event type. New event types can be registered by defining a query using CEP operators to detect specific patterns on incoming events from other event types. In order to process real-time data for Smart Cities, scalability and fault tolerance are the main requirements to be fulfilled. Satisfying these requirements is essential to maintain a functioning system with acceptable latency levels for Smart Cities situation detection. Using cloud providers is a convenient method to distribute and scale complex event processing since cloud providers can dynamically manage computational resource usage. Current open-source CEP implementations do not offer official cloud-native execution support, or even official distributed execution support.  This work presents a cloud-native microservice architecture for distributed CEP. Event processing is distributed across several instances of the same microservice, which can be dynamically created or destroyed based on resource usage. These instances use a choreography style of communication among each other, where there are no central nodes controlling all other instances. Instead, they must agree on any multi-instance action. This style of communication ensures greater fault tolerance since failures in one instance do not affect event processing in all other instances. A prototype of this architecture was developed, using open source tools, integrated with the InterSCity Smart City Platform, from INCT Future Internet for Smart Cities. 
+To evaluate the performance of the system, an experimental scenario of Smart Cities was designed: the detection of traffic problems from real data of bus positions of public transport in São Paulo. Four metrics were analyzed: latency, throughput, number of events detected, and resource time usage. Results showed the system achieved self-scalability, creating new CEP nodes as the input load increased while maintaining acceptable levels of latency. Furthermore, latencies were typically below a hundred milliseconds, satisfying real-time processing requirements of the Smart City scenario. \\
 
 
-%\todo[inline]{Isto está horrivel}
-
-\noindent \textbf{Keywords:} Cloud-Native, Complex Event Processing, Smart Cities, CEP, Big Data, Real-time Processing, Scalability, Microservices.
+\noindent \textbf{Keywords:} Smart Cities, Complex Event Processing,  Cloud-Native Computing, Big Data Processing, Scalability, Microservices.
 
 % ---------------------------------------------------------------------------- %
 % Sumário
@@ -325,14 +321,18 @@ In order to evaluate system performance four metrics are analyzed: latency, thro
 % ---------------------------------------------------------------------------- %
 \chapter{Lista de Abreviaturas}
 \begin{tabular}{ll}
-         CEP         & Processamento de Eventos Complexos (\emph{Complex Event Processing})\\
-         EPA         & Processador de Eventos (\emph{Event Processing Agent})\\
-         SGBD        & Sistema Gerenciador de Banco de Dados \\
-         IoT         & Internet das Coisas (\emph{Internet Of Things})\\
-%         ICT         & Tecnologias da Informação e Comunicação (\emph{Information and Communication Technologies})\\
          API		 & Interface de Programação de Aplicação (\emph{Application programming interface}) \\
-         UUID        & Identificador Único Universal (\emph{Universally Unique Identifier}) \\
-         SPTrans   & São Paulo Transporte S/A 
+         CAPES       & Coordenação de Aperfeiçoamento de Pessoal de Nível Superior\\
+         CEP         & Processamento de Eventos Complexos (\emph{Complex Event Processing})\\
+         CNPq        & Conselho Nacional de Desenvolvimento Científico e Tecnológico\\
+         EPA         & Processador de Eventos (\emph{Event Processing Agent})\\
+         FAPESP      & Fundação de Amparo à Pesquisa do Estado de São Paulo\\
+         INCT        & Instituto Nacional de Ciência e Tecnologia\\ 
+         IoT         & Internet das Coisas (\emph{Internet Of Things})\\
+         SGBD        & Sistema Gerenciador de Banco de Dados \\
+         SPTrans   & São Paulo Transporte S/A \\
+         UUID        & Identificador Único Universal (\emph{Universally Unique Identifier})
+         
 \end{tabular}
 
 % ---------------------------------------------------------------------------- %
